# dyn-arm

./: .gitattributes  .gitignore  LICENSE  README.md
docs/: SETUP.md  architecture.md  arm_torque_budget.xlsx
ros2_ws/src/dyn_arm/: package.xml  setup.cfg  setup.py
ros2_ws/src/dyn_arm/config/: arm_params.yaml
ros2_ws/src/dyn_arm/dyn_arm/: arm_node.py  demo_node.py  joint_command_node.py  kinematics.py  twin_echo_node.py
ros2_ws/src/dyn_arm/launch/: arm.launch.py  demo.launch.py  display.launch.py
ros2_ws/src/dyn_arm/meshes/: anchor_bracket.stl  gripper_actuator.stl  gripper_base.stl  j2j1_member.stl  j2j1_member_mirrored.stl  j3j2_member.stl  j3j2_member_mirrored.stl  xm430.stl  xm540.stl
ros2_ws/src/dyn_arm/rviz/: arm.rviz
ros2_ws/src/dyn_arm/urdf/: arm.xacro
tools/: README.md  motor_tool.py  ros_launch.sh
windows/: attach_u2d2.ps1  start_vcxsrv.ps1
