<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dyn_arm</name>
  <version>1.0.0</version>
  <description>
    A 3-DOF Dynamixel arm in ROS2: a driver with per-joint limits, a forward-kinematics
    virtual floor, current-limited holding, and a failsafe watchdog, driven from RViz
    sliders with a live digital twin.
  </description>
  <maintainer email="Olivierueno@users.noreply.github.com">Olivier Ueno</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
